[fix]#7433 fix gap in media library

--- a/assets/themes/leo/css/modules.less
+++ b/assets/themes/leo/css/modules.less
@@ -1279,6 +1279,10 @@ nav.vertical, .app-menu{
 		color: white;
 	}
 }
+media-library nav.vertical ul li a{
+	text-indent: 0;
+}
+
 
 .vertical-spacing {
 	margin-top: 20px !important;
