--- a/assets/themes/leo/default/theme.css
+++ b/assets/themes/leo/default/theme.css
@@ -8243,6 +8243,9 @@ nav.vertical a.classic-link:hover,
   background: #4bafd5;
   color: white;
 }
+media-library nav.vertical ul li a {
+  text-indent: 0;
+}
 .vertical-spacing {
   margin-top: 20px !important;
   margin-bottom: 20px !important;
